fix Testing method writeString -> write